--- a/cat/build.gradle
+++ b/cat/build.gradle
@@ -2,7 +2,11 @@ plugins {
     id 'java'
     id 'war'
 }
+tasks.withType(JavaCompile) {
 
+    options.encoding = "UTF-8"
+
+}
 version '1.0-SNAPSHOT'
 
 repositories {
